# IA-AGENTIQUE

Evaluation-finale/: .env.example  .gitignore  RAPPORT_TOURISME_PLAN.md  README.md  download_pdfs.py  graph.mmd  main.py  pyproject.toml
Evaluation-finale/evaluation/: questions.py
Evaluation-finale/src/: config.py  graph.py  tools.py  vectorstore.py
Evaluation-finale/tests/: test_graph_routing.py  test_retrieve.py  test_tools.py
